Changed xml stuff

--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -2,7 +2,7 @@
 port               : /dev/ttyACM0
 baud               : 2000000
 
-useCurrentCartPose : true
+useCurrentCartPose : false
 useNullspacePose   : true
 useFTinput         : true
 forceTorqueOn      : false
