--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -6,13 +6,13 @@ useCurrentCartPose : false
 useNullspacePose   : true
 useFTinput         : true
 forceTorqueOn      : true
-useFlexiForce      : true
+useFlexiForce      : false
 
 # Only one can be true
-useARMAmodel       : false
+useARMAmodel       : true
 useCTARMAmodel     : false
 useFIRmodel        : false
-useMRACmodel       : true
+useMRACmodel       : false
 useIRLmodel        : false
 useMSDmodel        : false
 useDirectmodel     : false
@@ -22,7 +22,7 @@ outerLoop_time     : 0.05
 # Is the reference trajectory x_r or q_r set externally or estimated
 # If externalRefTraj is false the human intent x_i is used
 # i.e. an admittance model is used to generate x_i from f_h the force from the FT sensor
-externalRefTraj    : false
+externalRefTraj    : true
 
 # Human intent estimation
 intentEst_time     : 0.05
@@ -116,12 +116,12 @@ task_mB             : 1.5
 # cartIniPitch :  0.0
 # cartIniYaw   :  0.0
 
-cartIniX     :  0.8
-cartIniY     : -0.05
-cartIniZ     :  0.0
-cartIniRoll  :  1.57079633
+cartIniX     :  0.7
+cartIniY     :  0.0
+cartIniZ     :  0.1
+cartIniRoll  :  0.0
 cartIniPitch :  0.0
-cartIniYaw   :  1.57079633
+cartIniYaw   :  0.0
 
 # cartDesX     :  0.7
 # cartDesY     : -0.3
@@ -144,12 +144,12 @@ cartDesYaw   :  0.0
 # lCartIniPitch :  0.0
 # lCartIniYaw   : -1.57079633
 
-lCartIniX     :  0.7
-lCartIniY     :  0.0
-lCartIniZ     :  0.1
-lCartIniRoll  :  0.0
+lCartIniX     :  0.8
+lCartIniY     :  0.05
+lCartIniZ     :  0.0
+lCartIniRoll  :  1.57079633
 lCartIniPitch :  0.0
-lCartIniYaw   :  0.0
+lCartIniYaw   : -1.57079633
 
 circleRate          : 1
 circleLlim          : 0.5
