--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -9,15 +9,15 @@ forceTorqueOn      : true
 useFlexiForce      : false
 
 # Only one can be true
-useARMAmodel       : true
+useARMAmodel       : false
 useCTARMAmodel     : false
 useFIRmodel        : false
-useMRACmodel       : false
+useMRACmodel       : true
 useIRLmodel        : false
 useMSDmodel        : false
 useDirectmodel     : false
 
-outerLoop_time     : 0.05
+outerLoop_time     : 0.001
 
 # Is the reference trajectory x_r or q_r set externally or estimated
 # If externalRefTraj is false the human intent x_i is used
@@ -49,131 +49,131 @@ mrac_gamma_5       : 5
 fixedFilterWeights : false
 
 # ARMA parameters
-filtW0             : -1.8775  #-1.8136 #-2.3646
-filtW1             :  1.2729  # 1.3171 # 1.9237
-filtW2             : -0.0578  #-0.4726 #-0.3255
-filtW3             : -0.3269  #-0.0082 #-0.1816
-filtW4             :  0.0018  # 0.0032 # 0.0049
-filtW5             :  0.0001  #-0.0010 #-0.0018
-filtW6             : -0.0013  #-0.0007 #-0.0018
-filtW7             :  0.0002  #-0.0009 # 0.0014
+filtW0                : -1.8775  #-1.8136 #-2.3646
+filtW1                :  1.2729  # 1.3171 # 1.9237
+filtW2                : -0.0578  #-0.4726 #-0.3255
+filtW3                : -0.3269  #-0.0082 #-0.1816
+filtW4                :  0.0018  # 0.0032 # 0.0049
+filtW5                :  0.0001  #-0.0010 #-0.0018
+filtW6                : -0.0013  #-0.0007 #-0.0018
+filtW7                :  0.0002  #-0.0009 # 0.0014
 
 # ARMA parameters for flexiforce          
-flex_1_filtW0      : 0.0
-flex_1_filtW1      : 0.0
-flex_1_filtW2      : 0.0
-flex_1_filtW3      : 0.0
-flex_1_filtW4      : 0.0
-flex_1_filtW5      : 0.0
-flex_1_filtW6      : 0.0
-flex_1_filtW7      : 0.0
+flex_1_filtW0         : 0.0
+flex_1_filtW1         : 0.0
+flex_1_filtW2         : 0.0
+flex_1_filtW3         : 0.0
+flex_1_filtW4         : 0.0
+flex_1_filtW5         : 0.0
+flex_1_filtW6         : 0.0
+flex_1_filtW7         : 0.0
 
-flex_2_filtW0      : 0.0
-flex_2_filtW1      : 0.0
-flex_2_filtW2      : 0.0
-flex_2_filtW3      : 0.0
-flex_2_filtW4      : 0.0
-flex_2_filtW5      : 0.0
-flex_2_filtW6      : 0.0
-flex_2_filtW7      : 0.0
+flex_2_filtW0         : 0.0
+flex_2_filtW1         : 0.0
+flex_2_filtW2         : 0.0
+flex_2_filtW3         : 0.0
+flex_2_filtW4         : 0.0
+flex_2_filtW5         : 0.0
+flex_2_filtW6         : 0.0
+flex_2_filtW7         : 0.0
 
-flex_3_filtW0      : 0.0
-flex_3_filtW1      : 0.0
-flex_3_filtW2      : 0.0
-flex_3_filtW3      : 0.0
-flex_3_filtW4      : 0.0
-flex_3_filtW5      : 0.0
-flex_3_filtW6      : 0.0
-flex_3_filtW7      : 0.0
+flex_3_filtW0         : 0.0
+flex_3_filtW1         : 0.0
+flex_3_filtW2         : 0.0
+flex_3_filtW3         : 0.0
+flex_3_filtW4         : 0.0
+flex_3_filtW5         : 0.0
+flex_3_filtW6         : 0.0
+flex_3_filtW7         : 0.0
 
-flex_4_filtW0      : 0.0
-flex_4_filtW1      : 0.0
-flex_4_filtW2      : 0.0
-flex_4_filtW3      : 0.0
-flex_4_filtW4      : 0.0
-flex_4_filtW5      : 0.0
-flex_4_filtW6      : 0.0
-flex_4_filtW7      : 0.0
+flex_4_filtW0         : 0.0
+flex_4_filtW1         : 0.0
+flex_4_filtW2         : 0.0
+flex_4_filtW3         : 0.0
+flex_4_filtW4         : 0.0
+flex_4_filtW5         : 0.0
+flex_4_filtW6         : 0.0
+flex_4_filtW7         : 0.0
 
 # This makes zero any force less than below
-forceCutOffX       : 0.0
-forceCutOffY       : 0.0
-forceCutOffZ       : 0.0
+forceCutOffX          : 0.1
+forceCutOffY          : 0.1
+forceCutOffZ          : 0.1
 
 # Params for the MSD outer-loop controller
-m_M                 : 1.0
-m_S                 : 0.0
-m_D                 : 5.0
+m_M                   : 1.0
+m_S                   : 0.0
+m_D                   : 5.0
 
 # Params for M(s) of the RLS models
-task_mA             : 1.5
-task_mB             : 1.5
+task_mA               : 0.5
+task_mB               : 0.5
 
-# cartIniX     :  0.7
-# cartIniY     :  0.0
-# cartIniZ     :  0.1
-# cartIniRoll  :  0.0
-# cartIniPitch :  0.0
-# cartIniYaw   :  0.0
+# cartIniX            :  0.7
+# cartIniY            :  0.0
+# cartIniZ            :  0.1
+# cartIniRoll         :  0.0
+# cartIniPitch        :  0.0
+# cartIniYaw          :  0.0
 
-cartIniX     :  0.7
-cartIniY     :  0.3
-cartIniZ     :  0.1
-cartIniRoll  :  0.0
-cartIniPitch :  0.0
-cartIniYaw   :  0.0
+cartIniX              :  0.7
+cartIniY              :  0.3
+cartIniZ              :  0.1
+cartIniRoll           :  0.0
+cartIniPitch          :  0.0
+cartIniYaw            :  0.0
 
-# cartDesX     :  0.7
-# cartDesY     : -0.3
-# cartDesZ     :  0.1
-# cartDesRoll  :  0.0
-# cartDesPitch :  0.0
-# cartDesYaw   :  0.0
+# cartDesX            :  0.7
+# cartDesY            : -0.3
+# cartDesZ            :  0.1
+# cartDesRoll         :  0.0
+# cartDesPitch        :  0.0
+# cartDesYaw          :  0.0
 
-cartDesX     :  0.7
-cartDesY     :  0.0
-cartDesZ     :  0.1
-cartDesRoll  :  0.0
-cartDesPitch :  0.0
-cartDesYaw   :  0.0
+cartDesX              :  0.7
+cartDesY              :  0.0
+cartDesZ              :  0.1
+cartDesRoll           :  0.0
+cartDesPitch          :  0.0
+cartDesYaw            :  0.0
 
-# lCartIniX     :  0.8
-# lCartIniY     :  0.05
-# lCartIniZ     :  0.0
-# lCartIniRoll  :  1.57079633
-# lCartIniPitch :  0.0
-# lCartIniYaw   : -1.57079633
+# lCartIniX           :  0.8
+# lCartIniY           :  0.05
+# lCartIniZ           :  0.0
+# lCartIniRoll        :  1.57079633
+# lCartIniPitch       :  0.0
+# lCartIniYaw         : -1.57079633
 
-lCartIniX     :  0.8
-lCartIniY     :  0.05
-lCartIniZ     :  0.0
-lCartIniRoll  :  1.57079633
-lCartIniPitch :  0.0
-lCartIniYaw   :  1.57079633
+lCartIniX             :  0.8
+lCartIniY             :  0.05
+lCartIniZ             :  0.0
+lCartIniRoll          :  1.57079633
+lCartIniPitch         :  0.0
+lCartIniYaw           :  1.57079633
 
-circleRate          : 1
-circleLlim          : 0.5
-circleUlim          : 1.5
+circleRate            : 1
+circleLlim            : 0.5
+circleUlim            : 1.5
 
-nnNum_Inputs        : 35 
-nnNum_Outputs       : 7
-nnNum_Hidden        : 10
-nnNum_Error         : 7  
-nnNum_Joints        : 7  
+nnNum_Inputs          : 35 
+nnNum_Outputs         : 7
+nnNum_Hidden          : 10
+nnNum_Error           : 7  
+nnNum_Joints          : 7  
 
 # Filtered error
 # r = (qd_m - qd) + lambda*(q_m - q);
 # Kv*r
 
-nn_Kv               : 5
-nn_lambda           : 20
-nn_kappa            : 0.3
-nn_Kz               : 0.001 
-nn_Zb               : 100 
-nn_feedForwardForce : 1   
-nn_nnF              : 100 
-nn_nnG              : 200
-nn_ON               : 1
+nn_Kv                 : 5
+nn_lambda             : 20
+nn_kappa              : 0.3
+nn_Kz                 : 0.001 
+nn_Zb                 : 100 
+nn_feedForwardForce   : 0   
+nn_nnF                : 100 
+nn_nnG                : 200
+nn_ON                 : 1
 
 # nn_Kv               : 5
 # nn_lambda           : 20
@@ -185,19 +185,19 @@ nn_ON               : 1
 # nn_nnG              : 100
 # nn_ON               : 1
 
-cartPos_Kp_x : 60.0
-cartPos_Kp_y : 60.0
-cartPos_Kp_z : 60.0
-cartPos_Kd_x : 10
-cartPos_Kd_y : 10
-cartPos_Kd_z : 10
+cartPos_Kp_x          : 60.0
+cartPos_Kp_y          : 60.0
+cartPos_Kp_z          : 60.0
+cartPos_Kd_x          : 10
+cartPos_Kd_y          : 10
+cartPos_Kd_z          : 10
 
-cartRot_Kp_x : 9.0
-cartRot_Kp_y : 9.0
-cartRot_Kp_z : 9.0
-cartRot_Kd_x : 3
-cartRot_Kd_y : 3
-cartRot_Kd_z : 3
+cartRot_Kp_x          : 9.0
+cartRot_Kp_y          : 9.0
+cartRot_Kp_z          : 9.0
+cartRot_Kd_x          : 3
+cartRot_Kd_y          : 3
+cartRot_Kd_z          : 3
 
 # Nominal angles for the arm joints
                 # Left arm              # Right arm
