--- a/uta_pr2_forceControl/pr2_controller.yaml
+++ b/uta_pr2_forceControl/pr2_controller.yaml
@@ -6,21 +6,21 @@ useCurrentCartPose : false
 useNullspacePose   : false
 useFTinput         : true
 forceTorqueOn      : true
-useFlexiForce      : true
+useFlexiForce      : false
 
 # Specifically for MRAC
 useSimHuman        : false
 
 # Only one can be true
-useARMAmodel       : true
+useARMAmodel       : false
 useCTARMAmodel     : false
 useFIRmodel        : false
-useMRACmodel       : false
+useMRACmodel       : true
 useIRLmodel        : false
 useMSDmodel        : false
 useDirectmodel     : false
 
-outerLoop_time     : 0.05
+outerLoop_time     : 0.001
 
 # Is the reference trajectory x_r or q_r set externally or estimated
 # If externalRefTraj is false the human intent x_i is used
@@ -29,8 +29,8 @@ externalRefTraj    : true
 
 # Human intent estimation
 intentEst_time     : 0.05
-intentEst_delT     : 0.1 # Propagation time
-intentEst_M        : 1.0 # M_i the mass of the intent admittance model
+intentEst_delT     : 0.1  # Propagation time
+intentEst_M        : 1.0  # M_i the mass of the intent admittance model
 
 # The params of the RLS estimator
 rls_lambda         : 0.98
@@ -48,6 +48,9 @@ mrac_gamma_2       : 2.0
 mrac_gamma_3       : 2.5
 mrac_gamma_4       : 5
 mrac_gamma_5       : 5
+
+mrac_P_m           : 1
+mrac_P_h           : 1
 
 fixedFilterWeights : false
 
