Added readme with installtion instructions and fixed dependencies.

--- a/ice_robot_controllers/CMakeLists.txt
+++ b/ice_robot_controllers/CMakeLists.txt
@@ -6,7 +6,7 @@ find_package(catkin REQUIRED COMPONENTS
   control_toolbox
   eigen
   ice_msgs
-  kdl
+  kdl_conversions
   pluginlib
   pr2_controller_interface
   pr2_gripper_sensor_controller
@@ -36,7 +36,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES ice_robot_controllers
-#  CATKIN_DEPENDS control_toolbox eigen ice_msgs kdl pluginlib pr2_controller_interface pr2_gripper_sensor_controller pr2_hardware_interface pr2_mechanism_model pr2_mechanism_msgs pr2_msgs realtime_tools roscpp std_srvs tf
+#  CATKIN_DEPENDS control_toolbox eigen ice_msgs kdl_conversions pluginlib pr2_controller_interface pr2_gripper_sensor_controller pr2_hardware_interface pr2_mechanism_model pr2_mechanism_msgs pr2_msgs realtime_tools roscpp std_srvs tf
 #  DEPENDS system_lib
 )
 
