--- a/ice_robot_controllers/package.xml
+++ b/ice_robot_controllers/package.xml
@@ -15,7 +15,7 @@
   <build_depend>control_toolbox</build_depend>
   <build_depend>eigen</build_depend>
   <build_depend>ice_msgs</build_depend>
-  <build_depend>kdl</build_depend>
+  <build_depend>kdl_conversions</build_depend>
   <build_depend>pluginlib</build_depend>
   <build_depend>pr2_controller_interface</build_depend>
   <build_depend>pr2_gripper_sensor_controller</build_depend>
@@ -31,7 +31,7 @@
   <run_depend>control_toolbox</run_depend>
   <run_depend>eigen</run_depend>
   <run_depend>ice_msgs</run_depend>
-  <run_depend>kdl</run_depend>
+  <run_depend>kdl_conversions</run_depend>
   <run_depend>pluginlib</run_depend>
   <run_depend>pr2_controller_interface</run_depend>
   <run_depend>pr2_gripper_sensor_controller</run_depend>
