--- a/ice_robot_controllers/CMakeLists.txt
+++ b/ice_robot_controllers/CMakeLists.txt
@@ -18,6 +18,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   std_srvs
   tf
+  angles
 )
 
 ## System dependencies are found with CMake's conventions
@@ -36,7 +37,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES ice_robot_controllers
-#  CATKIN_DEPENDS control_toolbox eigen ice_msgs kdl_conversions pluginlib pr2_controller_interface pr2_gripper_sensor_controller pr2_hardware_interface pr2_mechanism_model pr2_mechanism_msgs pr2_msgs realtime_tools roscpp std_srvs tf
+#  CATKIN_DEPENDS control_toolbox eigen ice_msgs kdl_conversions pluginlib pr2_controller_interface pr2_gripper_sensor_controller pr2_hardware_interface pr2_mechanism_model pr2_mechanism_msgs pr2_msgs realtime_tools roscpp std_srvs tf angles
 #  DEPENDS system_lib
 )
 
@@ -52,9 +53,12 @@ include_directories(
 )
 
 ## Declare a cpp library
-# add_library(ice_robot_controllers
-#   src/${PROJECT_NAME}/ice_robot_controllers.cpp
-# )
+add_library(ice_robot_controllers
+  src/cartneuroController.cpp
+)
+
+target_link_libraries(ice_robot_controllers ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+add_dependencies(ice_robot_controllers ice_robot_controllers_generate_messages_cpp)
 
 ## Declare a cpp executable
 # add_executable(ice_robot_controllers_node src/ice_robot_controllers_node.cpp)
