--- a/ice_robot_controllers/package.xml
+++ b/ice_robot_controllers/package.xml
@@ -27,6 +27,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>std_srvs</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>angles</build_depend>
   
   <run_depend>control_toolbox</run_depend>
   <run_depend>eigen</run_depend>
@@ -43,6 +44,7 @@
   <run_depend>roscpp</run_depend>
   <run_depend>std_srvs</run_depend>
   <run_depend>tf</run_depend>
+  <run_depend>angles</run_depend>
 
   <export>
     <pr2_controller_interface plugin="${prefix}/controller_plugins.xml"/>
