Runs in simulation by not loading the accelerometer and force/torque handle. Updated readme and controller configuration file.

--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -4,9 +4,10 @@ baud               : 2000000
 
 useCurrentCartPose : false
 useNullspacePose   : false
-useFTinput         : true
-forceTorqueOn      : true
+useFTinput         : false
+forceTorqueOn      : false
 useFlexiForce      : false
+accelerometerOn    : false
 
 # Specifically for MRAC
 useSimHuman        : true
