--- a/ice_robot_controllers/package.xml
+++ b/ice_robot_controllers/package.xml
@@ -13,7 +13,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>control_toolbox</build_depend>
-  <build_depend>eigen</build_depend>
+  <build_depend>cmake_modules</build_depend>
   <build_depend>ice_msgs</build_depend>
   <build_depend>kdl_conversions</build_depend>
   <build_depend>pluginlib</build_depend>
@@ -30,7 +30,7 @@
   <build_depend>angles</build_depend>
   
   <run_depend>control_toolbox</run_depend>
-  <run_depend>eigen</run_depend>
+  <run_depend>cmake_modules</run_depend>
   <run_depend>ice_msgs</run_depend>
   <run_depend>kdl_conversions</run_depend>
   <run_depend>pluginlib</run_depend>
