PR2 cart manager compiles. Temporary solution was to remove all the motion clients.

--- a/pr2_cart/CMakeLists.txt
+++ b/pr2_cart/CMakeLists.txt
@@ -52,12 +52,14 @@ add_library(           pr2_cart_lib   src/pr2_cart.cpp)
 target_link_libraries( pr2_cart_lib   ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 add_dependencies(      pr2_cart_lib   pr2_cart_lib_generate_messages_cpp)
 
-#add_library(           pr2_cart_manager_lib  src/pr2_cart_manager.cpp )
-#target_link_libraries( pr2_cart_manager_lib  pr2_cart_lib$ {catkin_LIBRARIES} ${Boost_LIBRARIES})
+add_library(           pr2_cart_manager_lib  src/pr2_cart_manager.cpp )
+target_link_libraries( pr2_cart_manager_lib  pr2_cart_lib ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+add_dependencies(      pr2_cart_manager_lib  pr2_cart_manager_lib_generate_messages_cpp)
 
 ## Declare a cpp executable
-#add_executable(        pr2_cart_manager   src/pr2_cart_manager.cpp
-#target_link_libraries( pr2_cart_manager   pr2_cart_lib ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+add_executable(        pr2_cart_manager      src/pr2_cart_manager.cpp)
+target_link_libraries( pr2_cart_manager      pr2_cart_lib ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+add_dependencies(      pr2_cart_manager      pr2_cart_manager_generate_messages_cpp)
  
 add_executable(         ft_sim             src/ft_simulation.cpp)     
 target_link_libraries(  ft_sim             ${catkin_LIBRARIES} ${Boost_LIBRARIES})
