Parameter for turning on/off a circular trajectory. Moved current state update of xd from update() to starting(). This makes the controller oscillate.

--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -9,6 +9,8 @@ forceTorqueOn      : false
 useFlexiForce      : false
 accelerometerOn    : false
 
+executeCircleTraj  : false
+
 # Specifically for MRAC
 useSimHuman        : true
 
