--- a/ice_robot_controllers/CMakeLists.txt
+++ b/ice_robot_controllers/CMakeLists.txt
@@ -21,8 +21,6 @@ find_package(catkin REQUIRED COMPONENTS
   angles
 )
 
-find_package(Eigen REQUIRED)
-
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
 # find_package(Boost REQUIRED COMPONENTS signals)
@@ -60,8 +58,8 @@ add_library(ice_robot_controllers
   src/cartesianController.cpp
 )
 
-add_library(outer_loop src/outer_loop.cpp)
-target_link_libraries(outer_loop ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+#add_library(outer_loop src/outer_loop.cpp)
+#target_link_libraries(outer_loop ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
 target_link_libraries(ice_robot_controllers ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 add_dependencies(ice_robot_controllers ice_robot_controllers_generate_messages_cpp)
