Removed KDL variables from controller class. Improved circular motion code for testing. Added variables to state msg. Fixed bugs that resulted in a zero command torque (tau). Outerloop is currently not being updated.

--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -9,7 +9,7 @@ forceTorqueOn      : false
 useFlexiForce      : false
 accelerometerOn    : false
 
-executeCircleTraj  : false
+executeCircleTraj  : true
 
 # Specifically for MRAC
 useSimHuman        : true
@@ -18,7 +18,7 @@ useSimHuman        : true
 useARMAmodel       : false
 useCTARMAmodel     : false
 useFIRmodel        : false
-useMRACmodel       : true
+useMRACmodel       : false
 useIRLmodel        : false
 useMSDmodel        : false
 useDirectmodel     : false
@@ -28,7 +28,7 @@ outerLoop_time     : 0.001
 # Is the reference trajectory x_r or q_r set externally or estimated
 # If externalRefTraj is false the human intent x_i is used
 # i.e. an admittance model is used to generate x_i from f_h the force from the FT sensor
-externalRefTraj    : true
+externalRefTraj    : false
 
 # Human intent estimation
 intentEst_time     : 0.05
