Publishes NN weights and norms for debugging.

--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -4,11 +4,11 @@ baud               : 2000000
 
 useCurrentCartPose : false
 useNullspacePose   : true
-forceTorqueOn      : true
+forceTorqueOn      : false
 useFlexiForce      : false
 accelerometerOn    : false
 
-executeCircleTraj  : false
+executeCircleTraj  : true
 
 # Specifically for MRAC
 useSimHuman        : true
